# Mailing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_FIXES.md  CHANGELOG.md  Dockerfile  ENHANCED_SUMMARY.md  FEATURES.md  FINAL_REPAIR_REPORT.md  LICENSE  MANIFEST.in  Makefile  QUICK_SELL_GUIDE.md  README.md  README_ENHANCED.md  SALES.md  add_docstrings.py  aggressive_fixer.py  auto_fix_all.py  comprehensive_audit.py  comprehensive_fixer.py  comprehensive_project_report.py  comprehensive_project_report_20251020_161058.json  comprehensive_report.py  create_release.py  create_simple_test.py  deep_analysis.py  detailed_audit.py  detailed_audit_report_20251020_170913.json  detailed_audit_report_20251020_171344.json  detailed_audit_report_20251020_172931.json  docker-compose.yml  emergency_fix_tests.py  enhanced_gui_app.py  final_cleanup.py  final_quality_check.py  final_real_test.py  final_report.py  (+33 more)
.github/scripts/: check_coverage_threshold.py  generate_coverage_badge.py  generate_coverage_comment.js
.github/workflows/: ci.yml  coverage-monitoring.yml
api/: openapi.json
config/: .env.test
data_loader/: base.py  csv_loader.py  excel_loader.py  json_loader.py  streaming.py
docs/: API_DOCUMENTATION.md  INSTALL.md  SALES.md  TESTING.md
gui/: animation_utils.py  app.py  apple_table.py  base_window.py  components.py  design_system.py  enhanced_main_window.py  error_handling.py  i18n.py  layout_utils.py  log_handler.py  mailer_service.py  main_window.py  progress_ring.py  recipients_view.py  segmented_control.py  settings_panel.py  stats_card.py  stats_panel.py  styles.py  switch.py  template_preview.py  text_field.py  theme.py  themed.py  typography.py  vibrancy.py
mailing/: __init__.py  cli.py  config.py  config_broken.py  logging_config.py  logging_config_broken.py  models.py  preflight.py  sender.py  sender_broken.py  webhook_server.py
mailing/limits/: daily_quota.py  daily_quota_broken.py
persistence/: __init__.py  db.py  events_repository.py  repository.py  repository_broken.py
reports/: coverage.json  detailed_audit_report_20251020_173603.json
resend/: client.py  client_broken.py  rate_limiter.py  retry.py  retry_broken.py
samples/: README.txt  data.json  recipients.csv  recipients.json  template.html  template.html.j2  template.txt  test_template.html  test_template_real.html
scripts/: auto_fix_all.py  generate_ssl_certs.sh  test_basic_functionality.py
security/: __init__.py
src/: __init__.py  enhanced_app.py
src/data_loader/: base.py  csv_loader.py  excel_loader.py  streaming.py
src/gui/: __init__.py  animation_utils.py  apple_table.py  base_window.py  design_system.py  enhanced_main_window.py  error_handling.py  i18n.py  layout_utils.py  log_handler.py  mailer_service.py  main_window.py  main_window_fixed.py  switch.py  text_field.py  themed.py  vibrancy.py
src/mailing/: cli.py  config.py  models.py  performance.py  preflight.py  sender.py  types.py  webhook_server.py
src/mailing/limits/: daily_quota.py
src/monitoring/: metrics.py
src/persistence/: backup.py  db.py  repository.py
src/resend/: client.py  rate_limiter.py  retry.py
src/security/: auth.py  https_config.py
src/stats/: __init__.py  aggregator.py
src/templating/: cached_engine.py  engine.py
src/tk_gui/: __init__.py
src/validation/: email_validator.py
stats/: __init__.py  aggregator.py  aggregator_broken.py
templating/: __init__.py  engine.py  html_highlighter.py
tests/: test_campaign_dryrun.py  test_cli.py  test_cli_extended.py  test_comprehensive_coverage.py  test_config.py  test_config_validation.py  test_data_loader.py  test_e2e_comprehensive.py  test_email_validator_extended.py  test_gui_integration.py  test_mailing_preflight.py  test_models.py  test_performance.py  test_performance_comprehensive.py  test_persistence_db.py  test_repository.py  test_resend_client.py  test_resend_rate_limiter.py  test_resend_retry.py  test_security_comprehensive.py  test_sender_extended.py  test_simple.py  test_stats.py  test_streaming_extended.py  test_templating.py  test_webhook_integration.py
tk_gui/: app.py  theme.py  visual_fx.py
validation/: email_validator.py
