[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "professional-email-marketing-tool"
version = "1.0.0"
description = "Professional Email Marketing Tool - Advanced mass mailing solution with web interface, CLI, and desktop GUI"
readme = "README.md"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["resend", "email", "mass", "async", "mailing", "webhook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
]
# Основные зависимости (минимальное пересечение с requirements.txt)
dependencies = [
    "httpx>=0.27.0",
    "Jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "openpyxl>=3.1.5",
    "email-validator>=2.1.0.post1",
    "pydantic>=2.8.2",
    "aiolimiter>=1.1.0",
    "backoff>=2.2.1",
    "orjson>=3.10.6",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "PySide6>=6.7.0",
    "qasync>=0.25.0",
    "customtkinter>=5.2.2",
    "click>=8.1.0",
]

[project.scripts]
email-marketing = "src.mailing.cli:main"
mailing-webhook = "src.mailing.webhook_server:run"
mailing-gui = "src.gui.app:main"
mailing-ctk-gui = "src.tk_gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "customtkinter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qasync.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "htmlcov"
]
